test/classes/errors/nilability-assign/assign-nonnil-borrowed-from-oknil-shared.good
assign-nonnil-borrowed-from-oknil-shared.chpl:8: error: Cannot assign to borrowed MyClass from shared MyClass?
